--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./backend/index.js"
+    "start": "npm install ./backend && node ./backend/index.js"
   },
   "author": "",
   "license": "ISC"
